# sv-logger

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
src/sv/: logger.hpp
test/: CMakeLists.txt  tester.cpp
